# TheSystem

./: CMakeLists.txt  app.rc  generate_icons.sh  installer.nsi  main.cpp  resources.qrc  restem.desktop
.github/workflows/: build-macos.yml  build-windows.yml
